<resources>
    <string name="app_name">Plants</string>

    <string name="bottom_home_item">Accueil</string>
    <string name="bottom_collection_item">Collection</string>
    <string name="bottom_add_plant_item">Ajouter</string>

    <!-- Page d'Acceuil -->
    <string name="home_page_title">A découvrir</string>
    <string name="home_page_last_plant_section">Dernières plantes</string>

    <!-- Page de Collection -->
    <string name="collection_page_title">Ma Collection</string>

    <!-- Page d'Ajout de Plantes -->
    <string name="add_plant_page_title">Ajout d\'une Plante</string>
    <string name="add_plant_page_upload_button">Charger Image</string>
    <string name="add_plant_page_name_input">@string/item_plant_name</string>
    <string name="add_plant_page_description_input">@string/item_plant_description</string>
    <string-array name="add_plant_page_grow_spinner_input">
        <item>Croissance : Lente</item>
        <item>Croissance : Moyenne</item>
        <item>Croissance : Rapide</item>
    </string-array>
    <string-array name="add_plant_page_water_spinner_input">
        <item>Consommation : Faible</item>
        <item>Consommation : Moyenne</item>
        <item>Consommation : Elevee</item>
    </string-array>
    <!--
    <string-array name="add_plant_page_categories_spinner_input">
        <item>categories : A</item>
        <item>categories : B</item>
        <item>categories : C</item>
    </string-array>
    -->
    <string name="add_plant_page_confirme_button">Confirmer</string>

    <!-- Fenêtre Popup de d'étails -->
    <string name="popup_plant_name">Plant Name</string>
    <string name="popup_plant_description_title">Description</string>
    <string name="popup_plant_description_sub_title">Petite Description</string>
    <string name="popup_plant_grow_title">Croissance</string>
    <string name="popup_plant_grow_sub_title">Lente</string>
    <string name="popup_plant_water_title">Consommation d\'Eau</string>
    <string name="popup_plant_water_sub_title">faible</string>
    <!--<string name="popup_plant_categories_title">Categories</string>
    <string name="popup_plant_categories_sub_title">A</string>-->

    <!-- Page Customise -->
    <string name="item_plant_name">Nome de la plante</string>
    <string name="item_plant_description">Description de la plante</string>

</resources>